[STEP-4] feat: 같은 유저 5명 신청 통합 테스트 완료